spade-tests/src/snapshots/spade_tests__typeinference__error_on_oversized_int_literal.snap
---
source: spade-tests/src/typeinference.rs
---
fn x() -> int<8> {
    128
}


error: Integer value does not fit in int<8>
  ┌─ testinput:2:5
  │
2 │     128
  │     ^^^ 128 does not fit in an int<8>
  │
  = note: int<8> fits integers in the range (-128, 127)


